--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5150,6 +5150,29 @@ a.thumbnail.active {
        -o-transition: width .6s ease;
           transition: width .6s ease;
 }
+.progress-ns {
+  height: 3px;
+  margin-bottom: 20px;
+  overflow: hidden;
+  background-color: #D1F1D8;
+  border-radius: 4px;
+}
+.progress-bar-ns {
+  float: left;
+  width: 0;
+  height: 100%;
+  font-size: 12px;
+  line-height: 3px;
+  color: #fff;
+  text-align: center;
+  background-color: #337ab7;
+  -webkit-transition: width .6s ease;
+       -o-transition: width .6s ease;
+          transition: width .6s ease;
+}
+.prog-borderless{
+  border-top: 0px !important ;
+}
 .progress-striped .progress-bar,
 .progress-bar-striped {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
@@ -5195,6 +5218,9 @@ a.thumbnail.active {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
   background-image:      -o-linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
   background-image:         linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
+}
+.progress-bar-grey {
+  background-color: #7AB77F;
 }
 .media {
   margin-top: 15px;
@@ -6761,8 +6787,27 @@ button.close {
     float: none;
     margin: 0 auto;
 }
-
 .no-round {
   border-radius: 0 !important;
 }
+
+.tasks-task{
+	text-decoration: none;
+	color:#333;
+}
+.tasks-task:hover{
+	text-decoration: none;
+	color:#245269;
+}
+.tasks-task:visited{
+	text-decoration: none;
+	color:#333;
+}
+.no-pad{
+	padding:0 !important;
+}
+.task-tbody{
+	border: 1px !important
+}
+.tbody tr.hidden {   display: none; }
 /*# sourceMappingURL=bootstrap.css.map */
