--- a/templates/elements/important.html
+++ b/templates/elements/important.html
@@ -4,12 +4,39 @@
             <div class="panel-heading">
                 <!-- Icon -->
                 <i class="glyphicon glyphicon-exclamation-sign"></i>&nbsp;
-                <strong>Important</strong>
+                <strong>Important Tasks</strong>
             </div>
-                <table class="table" ng-controller="taskController as taskCtrl">
-                	<tr ng-repeat="task in taskCtrl.tasks" ng-if="task.task_en != ''">
-                    	<td>{{task.task_en }}</td><td></td>
-                    </tr>
+                <table class="table" ng-controller="taskController">
+                	
+                	<tbody class="task-tbody" ng-repeat="task in tasks" ng-if="task.task_en != ''">
+                        <tr >
+                            <td>
+                                <span class='tasks-task' "/id/{{task.task_id}}">{{task.task_en }}</span>
+                            </td>
+                        </tr>
+
+                        <tr class="hidden"  bgcolor="#EFEFEF">
+                            <td>
+                                <a class='tasks-task' ng-href="/id/{{task.task_id}}"><h4><strong>{{task.task_en }}</strong></h4></a>
+                            </td>
+                        </tr>
+                        <tr class="hidden progress-ns" bgcolor="#F8F8F8">
+                            <td class="no-pad prog-borderless" >
+                                <div class="progress-bar-ns progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                                <span>&nbsp;</span>
+                          </div>
+                            </td>        
+                        </tr>
+						 <tr class="hidden" bgcolor="#F8F8F8" >
+                            <td class="prog-borderless">
+                                <strong>Due {{task.task_limit}}</strong>
+                                <br>
+                                <strong>Description:</strong>
+                                <p>{{task.task_description}}</p>
+                            </td>
+                        </tr>
+                    	
+                	</tbody>
                 </table>
         </div> 
     </div>
