--- a/templates/elements/nav.html
+++ b/templates/elements/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-inverse">
+<nav class="navbar navbar-default navbar-inverse" ng-controller="taskController">
   <div class="container-fluid"> 
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -7,10 +7,10 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="defaultNavbar1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#"><span class="glyphicon glyphicon-list"></span>&nbsp; Tasks<span class="sr-only">(current)</span></a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-file"></span>&nbsp; Projects</a></li>
-       	<li><a href="#"><span class="glyphicon glyphicon-folder-open"></span>&nbsp; Programs</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-book"></span>&nbsp; Groups</a></li>
+        <li class="active"><a href="#" ng-click="changeType('task')"><span class="glyphicon glyphicon-list"></span>&nbsp; Tasks<span class="sr-only">(current)</span></a></li>
+        <li><a href="#" ng-click="changeType('task')"><span class="glyphicon glyphicon-file"></span>&nbsp; Projects</a></li>
+       	<li><a href="#" ng-click="changeType('program')"><span class="glyphicon glyphicon-folder-open"></span>&nbsp; Programs</a></li>
+        <li><a href="#" ng-click="changeType('group')"><span class="glyphicon glyphicon-book"></span>&nbsp; Groups</a></li>
         <li><a href="#"><span class="glyphicon glyphicon-calendar"></span>&nbsp; Calendar</a></li>
       </ul>
      
